--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,16 @@
-
-
 <!DOCTYPE html>
 
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link href="..node_modules/materialize-css/dist/css/materialize.min.css" rel="stylesheet">
+    <link href="../node_modules/materialize-css/dist/css/materialize.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>ttt</title>
   </head>
 
   <body>
-    <app-root></app-root>
+    <app-root>loading</app-root>
   </body>
 </html>
 
